# neuralnetwork

./: CMakeLists.txt  README.md
data/: Theta1  Theta1_Random  Theta2  Theta2_Random  labels
src/: DigitClassifier.cpp  DigitClassifier.hpp  FlensOctave.cpp  FlensOctave.hpp  NNDefs.h  Test.cpp  fmincg.cpp  fmincg.h
